--- a/app/views/appeal/s78e/v2/prepare-appeal/confirm-phone-number.html
+++ b/app/views/appeal/s78e/v2/prepare-appeal/confirm-phone-number.html
@@ -20,6 +20,10 @@
     inputmode: "numeric"
   }) }}
 
-  <p class="govuk-body"><a href="request-a-new-phone-number-code" class="govuk-link">Not received a text message?</a></p>
+  <p class="govuk-body">
+    <a href="request-a-new-phone-number-code" class="govuk-link">
+      Not received a text message?
+    </a>
+  </p>
 
 {% endblock %}
