Adding application documents to the appellant submission and a check documents question in the LPA questionnaire

--- a/app/views/appeal/s78e/v2/task-list__prepare.html
+++ b/app/views/appeal/s78e/v2/task-list__prepare.html
@@ -657,7 +657,7 @@ Sustainability Statement – describing energy efficiency, renewable energy use,
           html: 'List of application documents'
         },
         value: {
-          html: data['application-documents'] or dummydocs | nl2br
+          html: data['application-documents'] or dummydocs
         }
         if data['application-documents-complete'] else
         {
