appeals as data

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -264,6 +264,25 @@
         </ul>'
       }) }}
 
+      <h3 class="govuk-heading-m">
+        Appeals as data
+      </h3>
+
+      <ul class="govuk-list govuk-list--bullet">
+        <li>
+          <a href="appeal/before-you-start/aad/successful/">Successful API call</a>
+        </li>
+        <li>
+          <a href="appeal/before-you-start/aad/partial-success/">Partially successful API call</a>
+        </li>
+        <li>
+          <a href="appeal/before-you-start/aad/invalid-ref-error/">Failure – invalid reference number</a>
+        </li>
+        <li>
+          <a href="appeal/before-you-start/aad/api-error/">Failure – API error (timeout, server error, etc.)</a>
+        </li>
+      </ul>
+
     {% endset -%}
 
     {% set manageHTML %}
