spelling mistakes fixed

--- a/app/views/appeal/before-you-start/aad/invalid-ref-error/application-ref-error.html
+++ b/app/views/appeal/before-you-start/aad/invalid-ref-error/application-ref-error.html
@@ -7,7 +7,7 @@
   <div class="govuk-grid-column-two-thirds">
 
     {{ govukErrorSummary({
-      titleText: "Planning pplication number not found",
+      titleText: "Planning application number not found",
       errorList: [
         {
           text: "Enter a valid planning application number",
